service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: nginx
      port: 9001
      targetPort: 80

    - name: multitool
      port: 9002
      targetPort: 8080
